# pg-serverless-rag

./: .gitignore  API_DOCUMENTATION.md  API_README.md  BEDROCK_KB_S3_VECTOR_GUIDE.md  CHAT_API_TEST_RESULTS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DOCUMENT_MANAGEMENT_API.md  END_TO_END_SUCCESS.md  FRONTEND_INTEGRATION_GUIDE.md  Makefile  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PROJECT_COMPLETE.md  RAG IMPLEMENTATION PLAN  README.md  VECTOR_STORAGE_STRATEGY.md  WEBSOCKET_STREAMING_API.md  buildspec.deploy.yml  buildspec.yml  openapi.yaml  postman_collection.json  pyproject.toml
docs/: CUSTOM_RAG_S3_VECTORS.md  DEPLOYMENT_GUIDE.md  PHASE2_COMPLETE.md  PHASE2_DEPLOYMENT.md  PHASE3_COMPLETE.md  PHASE3_DEPLOYMENT.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  S3VECTORS_BOTO3_IMPLEMENTATION.md  WEBSOCKET_API.md
infra/terraform/modules/iam/: main.tf  (+2 more)
infra/terraform/scripts/: provision_bedrock_kb.sh  provision_bedrock_kb_s3.py  provision_bedrock_kb_s3_vectors.sh  provision_s3_vectors.sh
prompts/chat_system/: system.txt
prompts/document_classifier/: system.txt
schemas/api/: chat_request.json  chat_response.json
schemas/metadata/: document_metadata.json
services/chat_handler/: package.sh
services/chat_handler/src/: __init__.py  handler.py
services/chat_handler/tests/: __init__.py  test_e2e.py  test_phase4_integration.py  test_rag_integration.py  test_websocket_e2e.py
services/document_manager/: package.sh  requirements.txt
services/document_manager/src/: __init__.py  handler.py
services/document_processor/: package.sh  requirements.txt
services/document_processor/package/: handler.py
services/document_processor/src/: __init__.py  handler.py
services/document_processor/tests/: __init__.py  test_e2e.py  test_integration.py
services/shared/: package_layer.sh
services/shared/src/: __init__.py  bedrock_wrappers.py  cache_manager.py  config.py  context_optimizer.py  conversation_history.py  document_classifier.py  document_parsers.py  dynamodb_access.py  logger.py  metadata_schemas.py  ocr_service.py  pdf_generator.py  performance_metrics.py  query_processor.py  rag_engine.py  retrieval_service.py  s3_helpers.py  s3_vectors.py  streaming_handler.py  text_processing.py  validation.py  websocket_handler.py
services/shared/tests/: test_config.py  test_logger.py  test_metadata_schemas.py  test_validation.py
services/websocket_handler/: package.sh
tests/: websocket_test_client.py
(+40 files in other folders)
